Simplify handling of electric tool abilities